packages/northserve/northserve-2.0.6-py3-none-any.whl/yaml_templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    model: SERVED_MODEL_NAME
  name: APP_NAME-svc
  namespace: NAMESPACE
spec:
  ports:
  - port: PORT
    protocol: TCP
    targetPort: PORT
  selector:
    model: SERVED_MODEL_NAME
  type: NodePort
