packages/northserve/northserve-2.0.6-py3-none-any.whl/yaml_templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "128m"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "0"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "on"
  name: APP_NAME-ingress-nginx-NAMESPACE
  namespace: NAMESPACE
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: APP_NAME
            port:
              number: PORT
